# lightning-transformers

./: .codecov.yml  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  after.txt  before.txt  conftest.py  data.py  file.txt  predict.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  train.py
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-checks.yml  ci-testing.yml  ci_install-pkg.yml  ci_testing.yml  code-format.yml  docs-check.yml  docs-deploy.yml  pypi-release.yml
cli/: __init__.py  train.py
conf/: config.yaml
conf/backbone/: bert-base-cased.yaml  default.yaml  gpt2.yaml  performer.yaml  roberta-base.yaml
conf/backbone/huggingface/: bert-base-cased.yaml  default.yaml  gpt2.yaml  roberta-base.yaml
conf/backbone/nlp/: default.yaml  seq2seq.yaml
conf/backbone/vision/: gpt2.yaml
conf/dataset/: default.yaml
conf/dataset/language_modeling/: squad.yaml  wikitext.yaml
conf/dataset/multiple_choice/: arc.yaml  race.yaml  swag.yaml  synonym.yaml
conf/dataset/nlp/: default.yaml  hf_default.yaml
conf/dataset/question_answering/: squad.yaml
conf/dataset/summarization/: cnn_dailymail.yaml  xsum.yaml
conf/dataset/text_classification/: emotion.yaml
conf/dataset/token_classification/: conll.yaml
conf/dataset/translation/: wmt16.yaml
conf/dataset/vision/: cifar_description.yaml  cifar_generate.yaml  mnist.yaml
conf/logger/: tchaton.yaml
conf/model/: default.yaml  huggingface.yaml
conf/model/language_modeling/: gpt2.yaml
conf/model/multiple_choice/: roberta-base.yaml
conf/model/question_answering/: huggingface.yaml
conf/model/text_classification/: huggingface.yaml
conf/module/: default.yaml
conf/optimizer/: adadelta.yaml  adagrad.yaml  adam.yaml  adamax.yaml  adamw.yaml  asgd.yaml  rmsprop.yaml  rprop.yaml  sgd.yaml
conf/optimizer/deepspeed/: adam.yaml  adamw.yaml  cpu_adam.yaml  onebitadam.yaml
conf/scheduler/: constant_schedule.yaml  constant_schedule_with_warmup.yaml  cosine_schedule_with_warmup.yaml  cosine_with_hard_restarts_schedule_with_warmup.yaml  linear_schedule_with_warmup.yaml  polynomial_decay_schedule_with_warmup.yaml
conf/scheduler/deepspeed/: warmuplr.yaml
conf/task/: default.yaml
conf/task/huggingface/: language_modeling.yaml  multiple_choice.yaml  question_answering.yaml  summarization.yaml  text_classification.yaml  token_classification.yaml  translation.yaml
conf/task/multiple_choice/: huggingface.yaml
conf/task/nlp/: default.yaml  language_modeling.yaml  masked_language_modeling.yaml  multiple_choice.yaml  question_answering.yaml  summarization.yaml  text_classification.yaml  token_classification.yaml  translation.yaml
conf/task/question_answering/: huggingface.yaml
conf/task/text_classification/: huggingface.yaml
conf/task/vision/: igpt.yaml
conf/tokenizer/: autotokenizer.yaml  default.yaml  huggingface.yaml
conf/tokenizer/clip/: default.yaml
conf/tokenizer/huggingface/: default.yaml
conf/trainer/: benchmark.yaml  ddp.yaml  debug.yaml  deepspeed.yaml  default.yaml  sharded.yaml  sparseml.yaml  tpus.yaml  zero_offload.yaml
conf/trainer/callbacks/: lottery_ticket.yaml  model_pruning.yaml  sparseml.yaml
conf/trainer/logger/: sparsewandb.yaml  tensorboard.yaml  testtube.yaml  wandb.yaml
conf/trainer/plugins/: deepspeed_offload.yaml  sharded.yaml  sparseml.yaml  zero.yaml  zero_offload_stage_3.yaml
conf/training/: default.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  introduction.rst  quickstart.rst
docs/source/_static/: images
docs/source/_templates/: layout.html  theme_variables.jinja
docs/source/advanced/: custom_datasets.rst  custom_task.rst  extending_datasets.rst  new_task.rst
docs/source/datasets/: custom.rst  custom_data.rst  nlp.rst  vision.rst
docs/source/features/: hf_save.rst  large_model.rst  large_model_training.rst  sparseml.rst
docs/source/optimizations/: deepspeed.rst  hf_save.rst  large_model.rst  lightning.rst  sharded.rst  sparseml.rst
docs/source/references/: api.rst  datamodule_api.rst  task_api.rst
docs/source/structure/: code.rst  conf.rst
docs/source/tasks/: custom.rst  new.rst  nlp.rst  vision.rst
docs/source/trainer/: logging.rst
examples/: README.md  generate.py  image_classification.py  language_modeling.py  masked_language_modeling.py  multiple_choice.py  question_answering_squad.py  speech_recognition.py  summarization.py  text_classification.py  token_classification.py  translation_wmt.py
examples/custom_language_modeling/: dataset.py  model.py
examples/custom_translation/: dataset.py  model.py
examples/question-answering/: train.py
examples/text-classification/: train.py
lightning_transformers/: __init__.py  base.py  data.py  models.py  setup_tools.py  utils.py
lightning_transformers/callbacks/: __init__.py  sparseml.py
lightning_transformers/cli/: predict.py  train.py
lightning_transformers/core/: __init__.py  base.py  callback.py  config.py  data.py  finetuning.py  hydra_model.py  instantiator.py  iterable.py  loggers.py  model.py  models.py  utils.py
lightning_transformers/huggingface/: __init__.py  data.py  instantiator.py  model.py
lightning_transformers/plugins/: __init__.py  checkpoint.py
lightning_transformers/question_answering/: squad_preparation.py
lightning_transformers/tokenizers/: __init__.py  autotokenizer.py  huggingface.py
lightning_transformers/utilities/: deepspeed.py  imports.py
lit_transformers_cli/: __init__.py
requirements/: devel.txt  docs.txt  extra.txt  test.txt
tests/: __init__.py  conftest.py  requirements.txt  test_TODO.py  test_sample_module.py
tests/cli/: test_predict.py  test_train.py
tests/core/: boring_model.py  test_callbacks.py  test_cli.py  test_config.py  test_instantiator.py  test_loggers.py  test_model.py  test_model_step.py
tests/core/nlp/: test_nlp_model.py
tests/examples/: test_custom_language_modeling.py  test_custom_translation.py  test_language_modeling_example.py
(+345 files in other folders)
