[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict
    --doctest-modules
    --durations=25
    --color=yes

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass

[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
ignore =
    E731  # do not assign a lambda expression, use a def
    W504  # line break occurred after a binary operator
    E203  # whitespace before ':'. Opposite convention enforced by black
    E231  # missing whitespace after ',', ';', or ':'; for black
    W503  # line break before binary operator, need for black

# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*

[metadata]
license_file = LICENSE
description-file = README.md

#[mypy]
# Typing tests is low priority, but enabling type checking on the
# untyped test functions (using `--check-untyped-defs`) is still
# high-value because it helps test the typing.
#files = lightning_transformers, train.py
#disallow_untyped_defs = True
#ignore_missing_imports = True
#show_error_codes = True
#warn_redundant_casts = True
#warn_unused_configs = True
#warn_unused_ignores = True
