[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict
    --doctest-modules
    --color=yes


[coverage:report]
exclude_lines =
    pragma: no-cover
    pass


[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
ignore =
    E731  # do not assign a lambda expression, use a def
    W504  # line break occurred after a binary operator


[metadata]
license_file = LICENSE
description-file = README.md


[yapf]
based_on_style = pep8
spaces_before_comment = 2
split_before_logical_operator = true
split_before_arithmetic_operator = true
COLUMN_LIMIT = 120
COALESCE_BRACKETS = true
DEDENT_CLOSING_BRACKETS = true
ALLOW_SPLIT_BEFORE_DICT_VALUE = false
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true
NO_SPACES_AROUND_SELECTED_BINARY_OPERATORS = false


[isort]
profile = "google"
line_length = 120
force_sort_within_sections = false
order_by_type = false


# TODO: enable when better supported
#[mypy]
#files = lightning_transformers, train.py
#disallow_untyped_defs = True
#ignore_missing_imports = True
#show_error_codes = True
#warn_redundant_casts = True
#warn_unused_configs = True
#warn_unused_ignores = True
