[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict
    --doctest-modules
    --color=yes


[coverage:report]
exclude_lines =
    pragma: no-cover
    pass


[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
ignore =
    E731  # do not assign a lambda expression, use a def
    W504  # line break occurred after a binary operator
    E203


[metadata]
license_file = LICENSE
description-file = README.md


# TODO: enable when better supported
#[mypy]
#files = lightning_transformers, train.py
#disallow_untyped_defs = True
#ignore_missing_imports = True
#show_error_codes = True
#warn_redundant_casts = True
#warn_unused_configs = True
#warn_unused_ignores = True
